adding triangulation code

--- a/MAC_mapping/Makefile
+++ b/MAC_mapping/Makefile
@@ -18,5 +18,8 @@ room_lookup: mac_mapping.h mac_mapping.c room_lookup.c
 get_macs: mac_mapping.h mac_mapping.c get_macs.c
 	gcc mac_mapping.h mac_mapping.c get_macs.c -Wall `pkg-config --cflags glib-2.0` `pkg-config --libs glib-2.0` -o get_macs
 
+triangulate: mac_mapping.h mac_mapping.c triangulate.c
+	gcc mac_mapping.h mac_mapping.c triangulate.c -Wall `pkg-config --cflags glib-2.0` `pkg-config --libs glib-2.0` -o triangulate
+
 clean:
-	rm -f get_macs room_lookup get_locs server client message_create_test a_client a_server
+	rm -f get_macs room_lookup get_locs server client message_create_test a_client a_server triangulate
