--- a/visualization/tutorial1/makefile
+++ b/visualization/tutorial1/makefile
@@ -5,8 +5,12 @@ include common.mk
 
 CXXFLAGS += `sdl2-config --cflags`
 CXXFLAGS += -g -lefence
+CFLAGS += `pkg-config --cflags glib-2.0`
+LDLIBS += `pkg-config --libs glib-2.0`
 
-LDFLAGS += `sdl2-config --libs` -lSDL2_mixer -lSDL2_image -lSDL2_ttf -lm
+LDFLAGS += `pkg-config --cflags glib-2.0`
+LDFLAGS += `pkg-config --libs glib-2.0`
+LDFLAGS += `sdl2-config --libs` -lSDL2_mixer -lSDL2_image -lSDL2_ttf -lm -pthread
 
 # linking the program.
 $(PROG): $(OBJS)
